[gd_scene load_steps=5 format=3 uid="uid://cd2ebxe3dop31"]

[ext_resource type="Texture2D" uid="uid://dcm80u2l6ouav" path="res://assets/backgrounds/TX Village Props Edited.png" id="1_bjnyd"]
[ext_resource type="Script" path="res://scn/WorldObjects/pass_rock.gd" id="1_we05w"]
[ext_resource type="Theme" uid="uid://ba8h2u1lk5xof" path="res://themes/btnBlack_theme.tres" id="3_l65mj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bremw"]
radius = 63.0
height = 126.0

[node name="PassRock" type="Node2D"]
script = ExtResource("1_we05w")

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = 10.0
offset_top = -121.0
offset_right = 50.0
offset_bottom = -90.0
auto_translate = false
theme = ExtResource("3_l65mj")
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("1_bjnyd")
region_enabled = true
region_rect = Rect2(544, 124, 62, 68)

[node name="OpenSprite" type="Sprite2D" parent="Area2D"]
visible = false
position = Vector2(4, -6)
texture = ExtResource("1_bjnyd")
region_enabled = true
region_rect = Rect2(632, 140, 22, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -13)
shape = SubResource("CapsuleShape2D_bremw")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
